[project]
name = "coin_metrics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aaron941001", email = "aaron941001@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
